<resources>
    <string name="app_name">CalculaGasto</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_config">Configurações</string>
    <string name="menuHome">Inicio</string>
    <string name="menuMeses">Meses</string>
    <string name="menuConfig">Configurações</string>
    <string name="hello">Olá</string>
    <string name="gastosTotais">Gastos anuais: R$ 8.340,45</string>
    <string name="exit_app">Sair</string>

    <string name="senha_login">Senha</string>
    <string name="naoPossuiConta">Não possui uma conta? Cadastre-se</string>
    <string name="textoBtnLogin">Entrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desconectarDialog">desconectar</string>
    <string name="desconectarCancelar">Cancelar</string>
    <string name="desconectarSair">Sair</string>
    <string name="tituloMeses">Meses</string>
    <string name="link_privacidade">Ao efetuar o cadastro você concorda com os <a href="https://calculagasto.com/html/sobre.html">Termos de Serviço</a> e reconhece nossa <a href="https://calculagasto.com/html/sobre.html">Politica de Privacidade</a></string>
</resources>