<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/menuhome"
            android:title="@string/menuHome" />
        <item
            android:id="@+id/nav_meses"
            android:icon="@drawable/menumeses"
            android:title="@string/menuMeses" />
        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/menuconfig"
            android:title="@string/menuConfig" />
        <item
            android:id="@+id/label_one"
            android:icon="@drawable/baseline_exit_to_app_24"
            android:title="@string/exit_app" />
    </group>
</menu>